--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
       "sourceType": "module"
   },
   "rules": {
+      "import/extensions": [0],
       "linebreak-style": 0,
       "no-unused-vars": ["error", {
         "vars": "all",
