--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^4.3.8",
     "lint-staged": "^13.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "stylelint": "^14.16.0",
     "stylelint-config-standard": "^29.0.0"
   }
