--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
       "import/prefer-default-export": "off",
       "class-methods-use-this": "off",
+      "no-param-reassign": "off",
       "import/extensions": [0],
       "linebreak-style": 0,
       "no-unused-vars": ["error", {
@@ -25,6 +26,7 @@
       }]
   },
   "globals": {
-      "cordova": "readonly"
+      "cordova": "readonly",
+      "M": "readonly"
   }
 }
